# yadf

./: Cargo.toml  LICENSE  README.md  bench.csv  bench.md  bench.sh  build.rs  yadf.py
.github/chglog/: RELEASE.tpl.md  release.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/bag/: Cargo.toml
crates/bag/src/: lib.rs
crates/lib/: Cargo.toml
crates/lib/src/: ext.rs  fs.rs  lib.rs  path.rs
crates/lib/src/fs/: filter.rs  heuristic.rs
examples/: keep_oldest.py
scripts/: bench.sh  yadf.py
src/: args.rs  bag.rs  ext.rs  fs.rs  hasher.rs  lib.rs  macros.rs  main.rs  path.rs
src/bag/: display.rs  mod.rs  replicates.rs  serialize.rs
src/fs/: filter.rs  hash.rs  heuristic.rs  mod.rs  wrapper.rs
src/report/: display.rs  mod.rs
tests/: common.rs  integration.rs  particular_cases.rs  test_dir.rs
tests/common/: mod.rs
