[package]
name = "yadf"
version = "1.3.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2021"
description = "yet another dupes finder"
license = "MIT"
homepage = "https://github.com/jRimbault/yadf"
repository = "https://github.com/jRimbault/yadf"
readme = "README.md"
rust-version = "1.81.0"
categories = ["command-line-utilities", "filesystem"]
keywords = ["dupe", "duplicate", "finder", "fdupes", "fast"]

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "yadf"
required-features = ["build-bin"]

[features]
default = ["build-bin"]
build-bin = [
  "dep:ahash",
  "dep:anyhow",
  "dep:blake3",
  "dep:byte-unit",
  "dep:clap",
  "dep:clap-verbosity-flag",
  "dep:csv",
  "dep:env_logger",
  "dep:highway",
  "dep:human-panic",
  "dep:metrohash",
  "dep:seahash",
  "dep:serde_json",
  "dep:twox-hash",
]

[dependencies]
# library dependencies
crossbeam-channel = "0.5.14"
dunce = "1.0.5"
globset = "0.4.15"
ignore = "0.4.23"
log = "0.4.25"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.217"
typed-builder = "0.20.0"
# binary dependencies
ahash = { version = "0.8.11", optional = true }
anyhow = { version = "1.0.95", optional = true }
byte-unit = { version = "5.1.6", features = ["byte"], optional = true }
clap = { version = "4.5.27", features = [
  "cargo",
  "derive",
  "string",
], optional = true }
clap-verbosity-flag = { version = "3.0.2", optional = true }
csv = { version = "1.3.1", optional = true }
env_logger = { version = "0.11.6", optional = true }
highway = { version = "1.3.0", optional = true }
human-panic = { version = "2.0.2", optional = true }
metrohash = { version = "1.0.7", optional = true }
seahash = { version = "4.1.0", optional = true }
serde_json = { version = "1.0.138", optional = true }
twox-hash = { version = "2.1.0", optional = true }
blake3 = { version = "1.5.5", optional = true }

[dev-dependencies]
assert_cmd = "2"
dirs = "6.0.0"
env_logger = "0.11.6"
highway = "1.3.0"
once_cell = "1.20.2"
serde_json = "1.0.138"
seahash = "4.1.0"
twox-hash = "2.1.0"
predicates = "3.1.3"
rand = "0.9"
