[package]
name = "yadf"
version = "1.3.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2021"
description = "yet another dupes finder"
license = "MIT"
homepage = "https://github.com/jRimbault/yadf"
repository = "https://github.com/jRimbault/yadf"
readme = "README.md"
rust-version = "1.82.0"
categories = ["command-line-utilities", "filesystem"]
keywords = ["dupe", "duplicate", "finder", "fdupes", "fast"]

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "yadf"
required-features = ["build-bin"]

[features]
default = ["build-bin"]
build-bin = [
  "dep:ahash",
  "dep:anyhow",
  "dep:blake3",
  "dep:byte-unit",
  "dep:clap",
  "dep:clap-verbosity-flag",
  "dep:csv",
  "dep:env_logger",
  "dep:highway",
  "dep:human-panic",
  "dep:metrohash",
  "dep:seahash",
  "dep:serde_json",
  "dep:twox-hash",
]

[dependencies]
# library dependencies
crossbeam-channel = "0.5.15"
dunce = "1.0.5"
globset = "0.4.16"
ignore = "0.4.23"
log = "0.4.27"
num_cpus = "1.17.0"
rayon = "1.11.0"
regex = "1.11.2"
serde = "1.0.219"
typed-builder = "0.21.2"
# binary dependencies
ahash = { version = "0.8.12", optional = true }
anyhow = { version = "1.0.99", optional = true }
byte-unit = { version = "5.1.6", features = ["byte"], optional = true }
clap = { version = "4.5.45", features = [
  "cargo",
  "derive",
  "string",
], optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true }
csv = { version = "1.3.1", optional = true }
env_logger = { version = "0.11.8", optional = true }
highway = { version = "1.3.0", optional = true }
human-panic = { version = "2.0.3", optional = true }
metrohash = { version = "1.0.7", optional = true }
seahash = { version = "4.1.0", optional = true }
serde_json = { version = "1.0.143", optional = true }
twox-hash = { version = "2.1.1", optional = true }
blake3 = { version = "1.8.2", optional = true }

[dev-dependencies]
assert_cmd = "2"
dirs = "6.0.0"
env_logger = "0.11.8"
highway = "1.3.0"
once_cell = "1.21.3"
serde_json = "1.0.143"
seahash = "4.1.0"
twox-hash = "2.1.1"
predicates = "3.1.3"
rand = "0.9"
