[package]
name = "yadf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
yadf-lib-bag = { path = "../bag", features = ["serde"] }
crossbeam-channel = "0.5.0"
dunce = "1.0.1"
globset = "0.4.6"
ignore = "0.4.16"
log = "0.4.11"
num_cpus = "1.13.0"
once_cell = "1.5.2"
rayon = "1.3.1"
regex = "1.4.2"
serde = "1.0.114"
sysinfo = "0.23"
typed-builder = "0.9.0"

[dev-dependencies]
once_cell = "1"
serde_json = "1"
env_logger = "0.9"
dirs = "4"
seahash = "4"
